# arf

./: .travis.yml  COPYING  Makefile  README.md  README.rst  arf.py  pyproject.toml  requirements-to-freeze.txt  requirements.txt  setup.cfg  setup.py  specification.md
.github/workflows/: publish-to-pypi.yml  tests-cxx.yml  tests-python.yml  tests.yml
c++/arf/: h5e.hpp
tests/: test_arf.py
