[bdist_wheel]
universal = 1

[pep8]
ignore=E221,E501,E701

[metadata]
name = arf
version = attr: arf.__version__
description = Advanced Recording Format for acoustic, behavioral, and physiological data
long_description = file: README.md
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: C++
    Topic :: Scientific/Engineering
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Natural Language :: English
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/arf

[options]
zip_safe = false
py_modules = arf
python_requires = >= 3.6
setup_requires =
    setuptools >=38.3.0
install_requires =
    h5py>=2.8,!=3.3.*
test_suite = tests
