[pep8]
ignore=E221,E501,E701

[metadata]
name = arf
version = attr: arf.__version__
description = Advanced Recording Format for acoustic, behavioral, and physiological data
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = neuroscience, data format
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD 3-Clause License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: C++
    Topic :: Scientific/Engineering
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Natural Language :: English
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/arf

[options]
py_modules = arf
python_requires = >= 3.7
setup_requires =
    setuptools >=38.3.0
install_requires =
    numpy<2
    h5py>=2.8,!=3.3.*
    packaging >= 23.0
test_suite = tests

[options.extras_require]
test =
    pytest >= 7.0
